# ShadowEngine

./: .gitignore  CMakeLists.txt  README.md  run.bat
docs/: input_system.md
examples/: input_demo.cpp
include/: Engine.hpp  Window.hpp
include/core/: ImageLoader.hpp
include/input/: Input.hpp  InputManager.hpp
include/math/: Matrix.hpp
include/rendering/: Mesh.hpp  RenderSystem.hpp  Shader.hpp
include/scene/: Camera.hpp  Scene.hpp
src/: main.cpp
src/core/: Engine.cpp  ImageLoader.cpp  Window.cpp  Window.hpp
src/input/: InputManager.cpp
src/math/: Matrix.cpp
src/rendering/: Mesh.cpp  RenderSystem.cpp  Shader.cpp
src/scene/: Camera.cpp  TestScene.cpp
